Fix issue with post list tables containing checkboxes having table cells a couple pixels too tall

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -319,7 +319,6 @@ td, .table-list li { font-size: $font_size_small; }
 
 /* Not yet deserving of its own CSS file */
 #stats ul { margin-top: 0; margin-bottom: 0; padding-left: 15px; }
-.checkbox { height: 12px; margin: 0; vertical-align: middle; } /* Keeps unread table from padding excessively for the checkboxes */
 #signup .sub { width: 90px; }
 .continuity-spacer { height: 20px; }
 .post-ignored { opacity: 0.3; }
